IF (NOT NETPARSER)
	SET(NETPARSER 0 CACHE BOOL "Enable the netparser module")
ENDIF()

IF (NETPARSER)
	PKG_CHECK_MODULES(MXML REQUIRED mxml>=2.7)

	INCLUDE_DIRECTORIES(${CAER_INCDIRS} ${MXML_INCLUDE_DIRS})
	LINK_DIRECTORIES(${CAER_LIBDIRS} ${MXML_LIBRARY_DIRS})

	ADD_LIBRARY(netparser SHARED netparser.cpp Neuron.cpp)

	TARGET_LINK_LIBRARIES(netparser ${CAER_LIBS} ${MXML_LIBRARIES})

	INSTALL(TARGETS netparser DESTINATION ${CAER_MODULES_DIR})
ENDIF()
